// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Sidebar/SidebarItem Selected 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-item"
    style="background-color: rgba(0, 0, 0, 0.87);"
  >
    <ul
      class="MuiList-root MuiList-padding"
    >
      <li>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiListItem-root makeStyles-link makeStyles-linkMain MuiListItem-gutters MuiListItem-button MuiListItem-selected makeStyles-linkSelected"
          href="/"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiListItemIcon-root"
          >
            <span />
          </div>
          <div
            class="MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
            >
              Cluster
            </span>
          </div>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Sidebar/SidebarItem Sublist 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-item"
    style="background-color: rgba(0, 0, 0, 0.87);"
  >
    <ul
      class="MuiList-root MuiList-padding"
    >
      <li>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiListItem-root makeStyles-link makeStyles-linkMain MuiListItem-gutters MuiListItem-button"
          href="/"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiListItemIcon-root"
          >
            <span />
          </div>
          <div
            class="MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
            >
              Cluster
            </span>
          </div>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </li>
      <li
        class="MuiListItem-root makeStyles-fullWidthList MuiListItem-gutters"
      >
        <div
          class="MuiCollapse-root makeStyles-fullWidth MuiCollapse-hidden"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <ul
                class="MuiList-root makeStyles-nested"
              >
                <li>
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root makeStyles-link makeStyles-linkActive MuiListItem-gutters MuiListItem-button"
                    href="/"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="MuiListItemText-root"
                    >
                      <span
                        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                      >
                        Namespaces
                      </span>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Sidebar/SidebarItem Sublist Expanded 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-item"
    style="background-color: rgba(0, 0, 0, 0.87);"
  >
    <ul
      class="MuiList-root MuiList-padding"
    >
      <li>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiListItem-root makeStyles-link makeStyles-linkActive makeStyles-linkMain MuiListItem-gutters MuiListItem-button MuiListItem-selected makeStyles-linkSelected"
          href="/"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiListItemIcon-root"
          >
            <span />
          </div>
          <div
            class="MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
            >
              Cluster
            </span>
          </div>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </li>
      <li
        class="MuiListItem-root makeStyles-fullWidthList MuiListItem-gutters"
      >
        <div
          class="MuiCollapse-root makeStyles-fullWidth MuiCollapse-entered"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <ul
                class="MuiList-root makeStyles-nested"
              >
                <li>
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root makeStyles-link makeStyles-linkActive MuiListItem-gutters MuiListItem-button"
                    href="/"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="MuiListItemText-root"
                    >
                      <span
                        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                      >
                        Namespaces
                      </span>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Sidebar/SidebarItem Unselected 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-item"
    style="background-color: rgba(0, 0, 0, 0.87);"
  >
    <ul
      class="MuiList-root MuiList-padding"
    >
      <li>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiListItem-root makeStyles-link makeStyles-linkMain MuiListItem-gutters MuiListItem-button"
          href="/"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiListItemIcon-root"
          >
            <span />
          </div>
          <div
            class="MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
            >
              Cluster
            </span>
          </div>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </li>
    </ul>
  </div>
</div>
`;
